// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BpkSectionHeader should render correctly 1`] = `
<DocumentFragment>
  <div
    class="bpk-section-header"
  >
    <div
      class="bpk-section-header__title-description bpk-section-header__title-description--default"
    >
      <span
        class="bpk-section-header__title"
      >
        <h2
          class="bpk-text bpk-text--body-default"
        >
          Section title
        </h2>
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BpkSectionHeader should render correctly with "type" prop 1`] = `
<DocumentFragment>
  <div
    class="bpk-section-header"
  >
    <div
      class="bpk-section-header__title-description bpk-section-header__title-description--on-dark"
    >
      <span
        class="bpk-section-header__title"
      >
        <h2
          class="bpk-text bpk-text--body-default"
        >
          Section title
        </h2>
      </span>
      <span
        class="bpk-section-header__description"
      >
        <span
          class="bpk-text bpk-text--body-default"
        >
          Section title description
        </span>
      </span>
    </div>
    <button
      class="bpk-button bpk-button--primary"
      type="button"
    >
      Action
    </button>
  </div>
</DocumentFragment>
`;

exports[`BpkSectionHeader should render correctly with a "description" prop 1`] = `
<DocumentFragment>
  <div
    class="bpk-section-header"
  >
    <div
      class="bpk-section-header__title-description bpk-section-header__title-description--default"
    >
      <span
        class="bpk-section-header__title"
      >
        <h2
          class="bpk-text bpk-text--body-default"
        >
          Section title
        </h2>
      </span>
      <span
        class="bpk-section-header__description"
      >
        <span
          class="bpk-text bpk-text--body-default"
        >
          Section title description
        </span>
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BpkSectionHeader should render correctly with an "button" prop 1`] = `
<DocumentFragment>
  <div
    class="bpk-section-header"
  >
    <div
      class="bpk-section-header__title-description bpk-section-header__title-description--default"
    >
      <span
        class="bpk-section-header__title"
      >
        <h2
          class="bpk-text bpk-text--body-default"
        >
          Section title
        </h2>
      </span>
      <span
        class="bpk-section-header__description"
      >
        <span
          class="bpk-text bpk-text--body-default"
        >
          Section title description
        </span>
      </span>
    </div>
    <button
      class="bpk-button bpk-button--primary"
      type="button"
    >
      Action
    </button>
  </div>
</DocumentFragment>
`;
